<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/expenseListFragment">

    <fragment
        android:id="@+id/expenseListFragment"
        android:name="com.marsou.notesfrais.ui.list.ExpenseListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_expense_list">

        <action
            android:id="@+id/action_expenseList_to_addEditExpense"
            app:destination="@id/addEditExpenseFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <argument
            android:name="expenseId"
            app:argType="long"
            android:defaultValue="-1" />
    </fragment>

    <fragment
        android:id="@+id/addEditExpenseFragment"
        android:name="com.marsou.notesfrais.ui.form.AddEditExpenseFragment"
        android:label="@string/add_expense"
        tools:layout="@layout/fragment_add_edit_expense">

        <argument
            android:name="expenseId"
            app:argType="long"
            android:defaultValue="-1" />

        <action
            android:id="@+id/action_addEditExpense_to_camera"
            app:destination="@id/cameraFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/cameraFragment"
        android:name="com.marsou.notesfrais.ui.camera.CameraFragment"
        android:label="@string/scan_receipt"
        tools:layout="@layout/fragment_camera" />

</navigation>
